--- a/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_Appointment_Status_Tracking_4.yaml
+++ b/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_Appointment_Status_Tracking_4.yaml
@@ -59,7 +59,12 @@ metadata:
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '59':
+      id: 59
+      crossFilters:
+        scope: global
+        chartsInScope: []
   native_filter_configuration:
   - id: NATIVE_FILTER-EumcJiApY
     controlValues:
@@ -86,7 +91,7 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 17
+    - 59
     tabsInScope: []
   - id: NATIVE_FILTER-uTQNiHhdj
     controlValues:
@@ -147,6 +152,40 @@ metadata:
     chartsInScope:
     - 17
     tabsInScope: []
+  - id: NATIVE_FILTER_DIVIDER-1ughKpvv4
+    type: DIVIDER
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
+      \u178E\u17CD (Reporting Period)"
+    description: ''
+  - id: NATIVE_FILTER-fk1fEAut9
+    controlValues:
+      enableEmptyFilter: false
+    name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
+    filterType: filter_time
+    targets:
+    - {}
+    defaultDataMask:
+      extraFormData: {}
+      filterState: {}
+      ownState: {}
+    cascadeParentIds: []
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    type: NATIVE_FILTER
+    description: ''
   shared_label_colors: {}
   color_scheme_domain: []
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    chartsInScope:
+    - 59
 version: 1.0.0
