--- a/base/configs/superset/assets/datasets/Analytics/Cervical_Cancer_Screening_RH_Raw_Data.yaml
+++ b/base/configs/superset/assets/datasets/Analytics/Cervical_Cancer_Screening_RH_Raw_Data.yaml
@@ -200,9 +200,9 @@ sql: "SELECT\n  MAX(p.openmrs_id) AS client_id,\n  MAX(p.patient_name) AS client
   \     SUBSTRING(\n        identifiers\n        FROM\n          'Passport No: ([^,]*)'\n\
   \      ) AS passport_no,\n      COALESCE(\n        REGEXP_REPLACE (\n          REGEXP_REPLACE\
   \ (\n            identifiers,\n            '(?:OpenMRS ID|National ID|IDPoor|PMRS\
-  \ ID|COVID vaccination ID): [^,]*,?\\s?',\n            '',\n            'g'\n  \
-  \        ),\n          '^, |, $',\n          ''\n        ),\n        NULL\n    \
-  \  ) AS other_identifiers,\n      -- Addresses\n      address_country AS country,\n\
+  \ ID|NSSF|SSN|COVID vaccination ID): [^,]*,?\\s?',\n            '',\n          \
+  \  'g'\n          ),\n          '^, |, $',\n          ''\n        ),\n        NULL\n\
+  \      ) AS other_identifiers,\n      -- Addresses\n      address_country AS country,\n\
   \      address_state_province AS province,\n      address_county_district AS district,\n\
   \      address_city AS commune,\n      address_1 AS village,\n      -- Attributes\n\
   \      SUBSTRING(\n        attributes\n        FROM\n          'Occupation: ([^/]*)'\n\
