--- a/base/pom.xml
+++ b/base/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-alpha.11</version>
     <relativePath></relativePath>
   </parent>
 
   <artifactId>ozone-cambodia</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.7.0</version>
   <name>Ozone Cambodia</name>
   <description>Ozone distribution for Cambodia</description>
   <packaging>pom</packaging>
@@ -21,7 +21,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
 
-    <analyticsQueriesVersion>1.1.0-SNAPSHOT</analyticsQueriesVersion>
+    <analyticsQueriesVersion>1.1.0</analyticsQueriesVersion>
 
     <supersetConfigsArtifactId>ozone-cambodia-superset-configs</supersetConfigsArtifactId>
     <analyticQueriesArtifactId>analytics-queries</analyticQueriesArtifactId>
