--- a/base/scripts/backup.docker-compose.yml
+++ b/base/scripts/backup.docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   create-backup-folder:
     image: busybox:latest
@@ -28,6 +26,9 @@ services:
           - openmrs-db-backup
     volumes:
       - "${BACKUP_PATH:-backup-path}:/opt/backup/"
+  #
+  # OpenMRS Initializer backups
+  #    
   openmrs-checksum-backup:
     image: mekomsolutions/filestore_backup:48d0823
     depends_on:
