--- a/base/scripts/docker-compose-reports-redirect.yml
+++ b/base/scripts/docker-compose-reports-redirect.yml
@@ -1,3 +1,7 @@
+#
+# This file is needed for KH to redirect /reports to a separate Superset set instance running with and AWS domain name 
+# since we could not get a Superset subdomain in time
+#
 services:
   frontend:
     labels:
