--- a/base/configs/superset/pom.xml
+++ b/base/configs/superset/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ozonehis</groupId>
         <artifactId>ozone-superset-configs</artifactId>
-        <version>1.0.0-alpha.11</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath></relativePath>
     </parent>
 
@@ -15,7 +15,7 @@
     <name>Ozone Cambodia Superset configs</name>
     <description>Superset configurations specific to Ozone Cambodia, to be used in Ozone Analytics</description>
     <packaging>pom</packaging>
-    <version>1.7.2</version>
+    <version>1.8.0-SNAPSHOT</version>
 
     <organization>
         <name>Ozone HIS</name>
