--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
     with:
       java-version: "8"
       maven-phase: "install"
-    secrets:
+      maven-args: "-P validator -DskipTests"
+    secrets: # We don't the secrets here. we make them not required.
       NEXUS_USERNAME: ${{ secrets.MEKOM_NEXUS_USERNAME }}
       NEXUS_PASSWORD: ${{ secrets.MEKOM_NEXUS_PASSWORD }}
 
