--- a/base/pom.xml
+++ b/base/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>ozone-cambodia</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.8.0-SNAPSHOT</version>
   <name>Ozone Cambodia</name>
   <description>Ozone distribution for Cambodia</description>
   <packaging>pom</packaging>
@@ -21,7 +21,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
 
-    <analyticsQueriesVersion>1.1.0-SNAPSHOT</analyticsQueriesVersion>
+    <analyticsQueriesVersion>1.2.0</analyticsQueriesVersion>
 
     <supersetConfigsArtifactId>ozone-cambodia-superset-configs</supersetConfigsArtifactId>
     <analyticQueriesArtifactId>analytics-queries</analyticQueriesArtifactId>
