Address review comments

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -177,7 +177,7 @@
           </execution>
 
           <execution>
-            <id>Override build OpenMRS Frontend Script</id>
+            <id>Override OpenMRS frontend build Groovy script</id>
             <phase>process-resources</phase>
             <goals>
               <goal>copy-resources</goal>
