--- a/base/pom.xml
+++ b/base/pom.xml
@@ -176,6 +176,7 @@
             </configuration>
           </execution>
 
+          <!-- Override the Groovy script provided by Ozone to allow overriding the App Shell version -->
           <execution>
             <id>Override OpenMRS frontend build Groovy script</id>
             <phase>process-resources</phase>
