--- a/base/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/base/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -358,7 +358,7 @@
   "@openmrs/esm-home-app": {
     "Translation overrides": {
       "km": {
-        "Home": "ទំព័រដើម"
+        "home": "ទំព័រដើម"
       }
     },
     "extensionSlots": {
