--- a/base/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/base/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -396,6 +396,15 @@
       "src": "ozone/emr_logo_small_not_bold.png",
       "alt": "emr-logo"
     },
+    "Translation overrides": {
+      "en": {
+        "cancel": "Cancel"
+      },
+      "km": {
+        "cancel": "បោះបង់",
+        "changeLanguage": "ប្ដូរ​ភាសា"
+      }
+    },
     "extensionSlots": {
       "app-menu-slot": {
         "configure": {
